--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 #.env file
 VITE_NODE_ENV=development
 VITE_URL_DEVELOPMENT=http://localhost:3000
-VITE_URL_PRODUCTION=https://social-media-server-d92z.onrender.com
+VITE_URL_PRODUCTION=https://server-hrdept-test.onrender.com/
